IngressAPI/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-ingress
  namespace: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: api-ingress
    spec:
      containers:
      - name: api-ingress
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.31.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/crds-ingress-nginx-config-cipher
        - --default-ssl-certificate=api/crossroads-ssl
        - --annotations-prefix=nginx.ingress.kubernetes.io
        - --ingress-class=nginx
        - --watch-namespace=$(POD_NAMESPACE)
