IngressAPI/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-ingress-service
  namespace: api
spec:
  type: LoadBalancer
  loadBalancerIP: 52.154.156.192
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: api-ingress
