IngressAPI/identity-rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: identity-api-ingress
  namespace: api
  annotations:
    ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - $API_HOST_NAME
    secretName: crossroads-ssl
  rules:
  - host: $API_HOST_NAME
    http:
      paths:
      - path: /identity(/|$)(.*)
        backend:
          serviceName: crds-identity-service
          servicePort: 80
