IngressAPI/rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    # nginx.ingress.kubernetes.io/add-base-url: "true" # Does not appear we need this
spec:
  tls:
  - hosts:
    - $API_HOST_NAME
    secretName: crossroads-ssl
  rules:
  - host: $API_HOST_NAME
    http:
      paths:
      - path: /golocal(/|$)(.*)
        backend:
          serviceName: crds-go-local-api-service
          servicePort: 80
      - path: /fred(/|$)(.*)
        backend:
          serviceName: fred-service
          servicePort: 80
      - path: /attendance(/|$)(.*)
        backend:
          serviceName: attendance-service
          servicePort: 80
      - path: /finance(/|$)(.*)
        backend:
          serviceName: crds-finance-service
          servicePort: 80
      - path: /event-checkin(/|$)(.*)
        backend:
          serviceName: crds-event-checkin-service
          servicePort: 80
      - path: /auth(/|$)(.*)
        backend:
          serviceName: crds-auth-service
          servicePort: 80
      - path: /serve(/|$)(.*)
        backend:
          serviceName: crds-serve-service
          servicePort: 80
      - path: /search-index(/|$)(.*)
        backend:
          serviceName: crds-search-index-service
          servicePort: 80
      - path: /video-service(/|$)(.*)
        backend:
          serviceName: crds-video-service
          servicePort: 80
      - path: /graphql-gateway(/|$)(.*)
        backend:
          serviceName: crds-graphql-gateway
          servicePort: 80
